# agentic-detective-mystery

./: .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
cases_before_diversity_fix/: 1.json  42.json  99.json
evals/cases/: 1.json  11.json  13.json  2.json  42.json
src/mystery/: cli.py  config.py  models.py  save.py
src/mystery/agents/: commitments.py  suspect.py
src/mystery/case_gen/: generator.py  llm.py  premise.py  prompts.py  validate.py
src/mystery/evals/: consistency.py  llm_player.py  optimal_player.py  solvability.py
src/mystery/graph/: game.py  router.py  state.py
src/mystery/rag/: chunks.py  indexer.py  retriever.py
src/mystery/tools/: _resolve.py  _streaming.py  accuse.py  analyze.py  examine.py  interrogate.py  locations.py  move.py  (+4 more)
tests/: conftest.py
tests/integration/: test_commitments_loop.py  test_consistency_eval.py  test_game_loop.py  test_index_persistence.py  test_llm_player.py  test_rag_scope_isolation.py  test_show_dispatch.py  test_solvability_eval.py  test_streaming.py  test_suspect_agent.py
tests/unit/: test_chunks.py  test_cli.py  test_commitments.py  test_discovery_tools.py  test_eval_command.py  test_forensics.py  test_generator.py  test_interrogate_command.py  test_models.py  test_new_command.py  test_notebook_summary.py  test_play_command.py  test_premise.py  test_router.py  test_save.py  test_show_tool.py  test_state.py  test_streaming_prefix.py  test_suspect_prompt.py  test_suspect_resolver.py  test_tools.py  test_topics.py  test_validate.py
