[project]
name = "agentic-detective-mystery"
version = "0.1.0"
description = "A local-first agentic detective mystery game built on LangGraph + RAG."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "langchain-chroma>=0.2",
    "langgraph>=0.2",
]

[project.scripts]
mystery = "mystery.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mystery"]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "ANN", "TCH"]

[tool.ruff.lint.flake8-bugbear]
# typer's idiomatic API requires Option/Argument calls in argument defaults.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
strict = true
python_version = "3.13"
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=src/mystery"
markers = ["eval: real-LLM evals, slow, skipped by default"]
testpaths = ["tests"]
